# ai-staff-v4

./: MANIFEST.in  README.md  __init__.py  __main__.py  getting_started.py  pyproject.toml
agents/: base.py  collab_loop.py  executor.py  reviewer.py
backends/: client.py  multi_client.py  smart_init.py
core/: verbose.py
docs/: _gen_chapters.py  实验对比方案.md  毕设论文框架.md  第一章_绪论.md  第三章_架构设计.md  第二章_相关技术.md  第五章_实验验证.md  第六章_总结与展望.md  第四章_系统实现.md
examples/: code_gen.py  creative.py  electrical_demo.py  electrical_skill_demo.py  expert_task.py  research.py  research_flow.py  simple.py
experts/: classifier.py  experts.yaml  registry.py
main_mod/: staff.py  startup.py
skills/: __init__.py  registry.py  skills.yaml
tests/: test_core.py
